kubernetes/sites-pipeline/subscribie-k8s-cron-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cronpod
  labels:
    subscribie: onboarding
    subscribie: cronpod
spec:
  serviceAccountName: cronpod
  containers:
  - name: cronpod
    image: subscribie/cronpod:v0.3
    imagePullPolicy: Always
    command: ["python", "cronjob.py"]
