kubernetes/sites-pipeline/ingress-example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: subscribie-onboarding-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    certmanager.k8s.io/issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  rules:
  - host: build.subscribie.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: subscribie-onboarding-svc
          servicePort: 80
  tls:
  - hosts:
    - build.subscribie.co.uk
    secretName: build-subscribie-co-uk-secret
