kubernetes/sites-pipeline/ingress-site-example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: beckerandstanleyassociates-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    certmanager.k8s.io/issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  rules:
  - host: beckerandstanleyassociates.subscribie.shop
    http:
      paths:
      - path: /
        backend:
          serviceName: beckerandstanleyassociates-service
          servicePort: 80
  tls:
  - hosts:
    - beckerandstanleyassociates.subscribie.shop 
    secretName: beckerandstanleyassociates.subscribie.shop-tls
